--- a/lib_rssi/src/main/res/layout/activity_rssi_collect.xml
+++ b/lib_rssi/src/main/res/layout/activity_rssi_collect.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="24dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -37,9 +37,9 @@
 
             <EditText
                 android:id="@+id/etTaskName"
-                android:layout_width="150dp"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:hint="10个字符以内"
+                android:hint="唯一且不能修改"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -56,62 +56,26 @@
                 android:layout_gravity="center"
                 android:textSize="15sp"
                 android:textColor="#000000"
-                android:text="当前X坐标:"/>
+                android:text="单位长度:"/>
 
             <EditText
-                android:id="@+id/etX"
-                android:layout_width="90dp"
+                android:id="@+id/etUnitLength"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:hint="整数"
-                android:inputType="number"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:layout_gravity="center"
-                android:textSize="15sp"
-                android:textColor="#000000"
-                android:text="当前Y坐标:"/>
-
-            <EditText
-                android:id="@+id/etY"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:hint="整数"
-                android:inputType="number"
+                android:hint="X或Y坐标递增长度(cm)"
                 android:textSize="14sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnCollect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="24dp"
-        android:text="收集一次RSSI"
-        android:padding="2dp"
-        android:textSize="16sp"
-        android:layout_marginBottom="12dp"
-        android:layout_alignParentBottom="true"/>
-
     <LinearLayout
         android:id="@+id/llBtnContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_above="@id/btnCollect"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/llInputContainer"
         android:layout_alignParentStart="true">
 
         <Button
@@ -138,14 +102,88 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btnCollect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="24dp"
+        android:text="收集一次RSSI"
+        android:padding="2dp"
+        android:textSize="16sp"
+        android:layout_marginBottom="6dp"
+        android:layout_alignParentBottom="true"/>
+
+    <LinearLayout
+        android:id="@+id/llXYContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_above="@+id/btnCollect">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="4dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:layout_gravity="center"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:text="当前X坐标:"/>
+
+            <EditText
+                android:id="@+id/etX"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="整数"
+                android:inputType="number"
+                android:layout_marginStart="8dp"
+                android:textSize="13sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:layout_gravity="center"
+                android:textSize="14sp"
+                android:textColor="#000000"
+                android:text="当前Y坐标:"/>
+
+            <EditText
+                android:id="@+id/etY"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="整数"
+                android:layout_marginStart="8dp"
+                android:inputType="number"
+                android:textSize="13sp" />
+
+        </LinearLayout>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="6dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_above="@+id/llBtnContainer"
-        android:layout_below="@+id/llInputContainer"/>
+        android:layout_above="@+id/llXYContainer"
+        android:layout_below="@+id/llBtnContainer"/>
 
 </RelativeLayout>
