--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="50dp"
         android:gravity="center"
         android:padding="2dp"
-        android:text="基于WiFi和PDR的室内定位系统设计"
+        android:text="基于WiFi和PDR的室内定位系统"
         android:textColor="#343434"
         android:textSize="20sp" />
 
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="设置："
         android:padding="2dp"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="功能："
         android:padding="2dp"
@@ -66,9 +66,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
-        android:text="WiFi-RSSI采集和上传"
+        android:text="RSSI采集和上传"
+        android:padding="2dp"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/toWifiPosition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="WiFi定位"
         android:padding="2dp"
         android:textAllCaps="false"
         android:textSize="16sp" />
@@ -78,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:text="RDP和WiFi融合定位"
         android:padding="2dp"
