--- a/lib_combine/src/main/res/layout/activity_combine.xml
+++ b/lib_combine/src/main/res/layout/activity_combine.xml
@@ -1,9 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CombineActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/etLength"
+        android:layout_width="100dp"
+        android:layout_height="54dp"
+        android:gravity="center|start"
+        android:layout_marginStart="16dp"
+        android:textSize="13sp"
+        android:inputType="number"
+        android:layout_marginBottom="18dp"
+        android:layout_alignParentBottom="true"
+        android:hint="步长（默认65）"/>
+
+    <TextView
+        android:id="@+id/unit"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_alignBottom="@id/etLength"
+        android:layout_alignTop="@id/etLength"
+        android:layout_toEndOf="@id/etLength"
+        android:text="cm"/>
+
+    <Button
+        android:id="@+id/btnStart"
+        android:layout_width="92dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textSize="13sp"
+        android:layout_alignBottom="@id/etLength"
+        android:layout_alignTop="@id/etLength"
+        android:layout_toEndOf="@id/unit"
+        android:text="开始定位"/>
+
+    <Button
+        android:id="@+id/btnStop"
+        android:layout_width="92dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:textSize="13sp"
+        android:layout_alignBottom="@id/etLength"
+        android:layout_alignTop="@id/etLength"
+        android:layout_toEndOf="@id/btnStart"
+        android:text="停止"/>
+
+    <com.zzy.common.widget.PathView
+        android:id="@+id/pathView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/etLength"
+        android:layout_marginBottom="12dp"
+        android:layout_alignParentTop="true"/>
+
+    <TextView
+        android:id="@+id/tvDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#888888"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
+
+</RelativeLayout>
