优化算法,优化线程调度器

--- a/lib_combine/src/main/res/layout/activity_combine.xml
+++ b/lib_combine/src/main/res/layout/activity_combine.xml
@@ -69,8 +69,8 @@
         android:textSize="14sp"
         android:textColor="#888888"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_alignParentStart="true"
+        android:layout_marginEnd="12dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"/>
 
 </RelativeLayout>
