--- a/lib_wifi/src/main/res/layout/activity_wifi_position.xml
+++ b/lib_wifi/src/main/res/layout/activity_wifi_position.xml
@@ -18,8 +18,8 @@
         android:textSize="15sp"
         android:textColor="#777777"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="12dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
